reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_self_via_arc_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithSelfViaArc::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithSelfViaArc"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithSelfViaArc",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::sync::Arc",
              "parameters": [
                {
                  "name": "reflect_demo::tests::basic::TestStructWithSelfViaArc"
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::sync::Arc",
        "description": "std::sync::Arc pointer type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fallback": {
          "name": "T"
        }
      }
    ]
  }
]
